Closed Bug 1701089 Opened 3 years ago Closed 3 years ago

vp09 codec string fails when parsing Widevine manifest

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 88+ fixed
firefox86 --- wontfix
firefox87 + wontfix
firefox88 + fixed
firefox89 + fixed

People

(Reporter: bryce, Assigned: bryce)

References

Details

Attachments

(1 file)

Summary: Vo09 codec string fails when parsing Widevine manifest → vp09 codec string fails when parsing Widevine manifest
Pushed by bvandyk@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/87c04ddb3dde
Accept "vp09" codec string in Widevine manifest. r=mjf

[Tracking Requested - why for this release]:

This issue is fatal to loading recent Widevine release -- Gecko will not load the CDM if it fails to parse the manifest. Given the looming release we should consider uplifts to avoid compatibility issues.

Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

The patch landed in nightly and beta is affected.
:bryce, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(bvandyk)

I plan to request uplift after performing a round of manual testing on nightly. Holding NI.

Comment on attachment 9211633 [details]
Bug 1701089 - Accept "vp09" codec string in Widevine manifest. r?alwu

Beta/Release Uplift Approval Request

  • User impact if declined: Playback of DRM video will fail as we will not load the Widevine CDM.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce: I have a PI request for the new CDM feature, this will be covered as part of that. I have also manually verified the patch functions as expected.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is low risk as this is a small change that is limited in scope and well understood. It makes our handling strictly more permissive, so we will not encounter issues such as rejecting manifest we used to accept -- but we will accept some we currently fail to parse.
  • String changes made/needed: None.

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Needed to handle new Widevine CDMs and continue to support DRM playback.
  • User impact if declined: Playback of DRM video will fail as we will not load the Widevine CDM.
  • Fix Landed on Version: 89.0a1
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is low risk as this is a small change that is limited in scope and well understood. It makes our handling strictly more permissive, so we will not encounter issues such as rejecting manifest we used to accept -- but we will accept some we currently fail to parse.
  • String or UUID changes made by this patch: None.
Attachment #9211633 - Flags: approval-mozilla-esr78?
Attachment #9211633 - Flags: approval-mozilla-beta?

Comment on attachment 9211633 [details]
Bug 1701089 - Accept "vp09" codec string in Widevine manifest. r?alwu

Approved for 88.0b5.

Attachment #9211633 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9211633 [details]
Bug 1701089 - Accept "vp09" codec string in Widevine manifest. r?alwu

Beta/Release Uplift Approval Request

  • User impact if declined: Playback of DRM video will fail as we will not load the Widevine CDM. Because of the short time frame for the upcoming release it would be good to cover 87 while in release as we would like to target it with the new CDM. This would also help by giving us extra buffer for users who are slower to update from 87 to 88 once 88 rolls over. Users on the old CDM during that cycle are likely to see lower video quality being served, at worst some cites may cease to serve media to the old CDM all together.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is low risk as this is a small change that is limited in scope and well understood. It makes our handling strictly more permissive, so we will not encounter issues such as rejecting manifest we used to accept -- but we will accept some we currently fail to parse.
  • String changes made/needed: None.
Flags: needinfo?(bvandyk)
Attachment #9211633 - Flags: approval-mozilla-release?

Comment on attachment 9211633 [details]
Bug 1701089 - Accept "vp09" codec string in Widevine manifest. r?alwu

Approved for 78.10esr. We may want to keep this on the radar as a ride-along if we end up needing a 78.9.1esr release as well.

Attachment #9211633 - Flags: approval-mozilla-esr78? → approval-mozilla-esr78+

Comment on attachment 9211633 [details]
Bug 1701089 - Accept "vp09" codec string in Widevine manifest. r?alwu

88 is in RC now and there are no plans for an 87 dot release.

Attachment #9211633 - Flags: approval-mozilla-release? → approval-mozilla-release-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: