Bug 1701089 - Accept "vp09" codec string in Widevine manifest. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D109810